--- a/10 SDN/SDN and nothing else.tex
+++ b/10 SDN/SDN and nothing else.tex
@@ -10,8 +10,8 @@
     \begin{itemize}
         \item Open \path{switch.py} and read it's codes carefully.
         \item Run this code with \lstinline{sudo python switch.py}
-        \item Ping \textit{h2} from \textit{h1}.
-        \item Capture OpenFlow hello packet on \textit{lo} interface. (Filter \lstinline{wireshark} output with \lstinline{of} filter)
+        \item Ping \textit{h2} from the \textit{h1}.
+        \item Capture OpenFlow hello packet on the \textit{lo} interface. (Filter \lstinline{wireshark} output with \lstinline{of} filter)
     \end{itemize}
 
     \begin{report}
@@ -50,7 +50,7 @@
         \item Execute \lstinline{sh ovs-ofctl add-flows s1 tables.txt} on mininet console.
         \item Ping each host from other hosts.
         \item Capture ICMP packets on each host and observe network behavior.
-        \item Modify \path{tables.txt} to drop packets between \textit{h1} and \textit{h2}.
+        \item Modify \path{tables.txt} to drop packets between \textit{h1} and the \textit{h2}.
     \end{itemize}
 
     \begin{figure}[H]
