--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -62,14 +62,14 @@
     \end{center}
 
 \section{Network Interfaces}
-    Use the \lstinline{ifconfig -a} command to display information about the network interfaces on \textit{h0}.
+    Use the \lstinline{ifconfig -a} command to display information about the network interfaces on the \textit{h0}.
     Find the IP address and the net mask of your machine.
     
     \begin{report}
         \item How many interfaces does the host have?
             List all the interfaces found, give their names, and explain their functions briefly.
 
-        \item What are the MTUs of the interfaces on \textit{h0}?
+        \item What are the MTUs of the interfaces on the \textit{h0}?
 
         \item Is network subnetted?
             What is the reasoning for your answer? What the experimental are the reasons for subnetting?
@@ -112,27 +112,27 @@ socket -u -i -n200 remote-host echo
     You need these \textbf{MAC} addresses for the exercises and lab report (as table of host and \textbf{MAC}).
 
 \section{ARP Table}
-    Use \lstinline{arp -a} to see the entire ARP table on \textit{h0}.
+    Use \lstinline{arp -a} to see the entire ARP table on the \textit{h0}.
     Observe that all the IP addresses displayed are on the same subnet.
 
-    If you find that all the remote hosts are in \textit{h0}’s ARP table, you need to delete a remote host from the table, using:
+    If you find that all the remote hosts are in the \textit{h0}’s ARP table, you need to delete a remote host from the table, using:
     \footnote{If you deleted \textit{h0}’s IP address from the ARP table by mistake, you must add the entry back in the table.
     See the \lstinline{arp} manual page to add.
-    Note that, in order for \textit{h0} to reply to the ARP requests, the ARP entry of \textit{h0} must have the \lstinline{P} flag in the ARP table.}
+    Note that, in order for the \textit{h0} to reply to the ARP requests, the ARP entry of \textit{h0} must have the \lstinline{P} flag in the ARP table.}
     \begin{lstlisting}[emph={remote-host}]
 arp -d remote-host
     \end{lstlisting}
 
     Save the ARP table for your lab report.
     
-    While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in \textit{h0} ARP table.
+    While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in the \textit{h0} ARP table.
     Then terminate the \lstinline{tcpdump} program.
 
     You can run \lstinline{wireshark} to capture network packet by \textbf{start capture} in GNS3 link menu.
 
     Observe the first few lines of the packet trace to see how ARP is used to resolve an IP address.
 
-    Run \lstinline{arp -a} to see a new line added in \textit{h0}’s ARP table.
+    Run \lstinline{arp -a} to see a new line added in the \textit{h0}’s ARP table.
     Save the new ARP table for your lab report.
 
     Mark the ARP request packet and the ARP reply packet in the \lstinline{wireshark} window.
@@ -152,7 +152,7 @@ arp -d remote-host
     \end{itemize}
 
 \section{ARP Timeout}
-    While \lstinline[emph={your-host}]{tcpdump host your-host} is running to capture traffic from your machine, execute \lstinline{telnet 128.238.66.200}.
+    While \lstinline[emph={h0,netlab}]{tcpdump host h0.netlab} is running to capture traffic from the \textit{h0} machine, execute \lstinline{telnet 128.238.66.200}.
     Note there is no host with this IP address in the current configuration of the lab network.
 
     Save the \lstinline{tcpdump} output of the first few packets for the lab report.
@@ -202,17 +202,17 @@ wr
     
     Now \textit{Router4}’s \textit{ethernet1} interface can perform proxy ARP for the hosts in the 128.238.64.0 subnet.
 
-    Run \lstinline{tcpdump -enx} on the \textit{h1} and \textit{h5}.
+    Run \lstinline{tcpdump -enx} on the \textit{h1} and the \textit{h5}.
 
     Then let the hosts in the 128.238.65.0 subnet send UDP datagrams to the hosts in the 128.238.64.0 subnet.
-    For example, on \textit{h4} type:
+    For example, on the \textit{h4} type:
     \begin{lstlisting}[emph={host-in-64-0-subnet},morekeywords={[3]echo}]
 socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \end{lstlisting}
 
     When you are done with all the hosts in the 128.238.64.0 subnet, save the \lstinline{tcpdump} output for the lab report.
 
-    Run \lstinline{arp -a} to display the new ARP table in \textit{h1}, \textit{h4} and \textit{h5}.
+    Run \lstinline{arp -a} to display the new ARP table in the \textit{h1}, \textit{h4} and the \textit{h5}.
     Save the ARP table for your lab report.
 
     % After the lab instructor restores the network into a single subnet (see \hyperref[fig:1.3]{Figure~1.3}), change the IP address and network mask of your host’s interface back to their default values as in \hyperref[fig:1.3]{Figure~1.3}.
@@ -267,7 +267,7 @@ arping -c 4 -U -I eth0 h7-ip
     
         \item List the sender IP address, target IP address, sender \textbf{MAC} address, and target \textbf{MAC} address of the gratuitous ARP you saved.
 
-        \item What is the ARP table in \textit{h5}?
+        \item What is the ARP table in the \textit{h5}?
     \end{report}
 
 
@@ -275,8 +275,8 @@ arping -c 4 -U -I eth0 h7-ip
     The following exercises use the previous network topology shown in \hyperref[fig:2.9]{Figure~2.9}.
 
 \section{ping ICMP}
-    Use \lstinline[emph={remote-host}]{ping -sv remote-host} to test whether the remote host is reachable, while running:
-    \\\lstinline[emph={your-host, remote-host},morekeywords={[3]host,and}]{tcpdump -enx host your-host and remote-host}.
+    Use \lstinline[emph={h1,netlab}]{ping -sv h1.netlab} on the \textit{h0} to test whether the \textit{h1} host is reachable, while running:\\
+    \lstinline[emph={h0,h1,netlab},morekeywords={[3]host,and}]{tcpdump -enx host h0.netlab and h1.netlab}.
     Save the \lstinline{tcpdump} and \lstinline{ping} output for the future study on \lstinline{ping}.
     
     \begin{report}
@@ -284,10 +284,10 @@ arping -c 4 -U -I eth0 h7-ip
     \end{report}
 
 \section{ICMP Port Unreachable}
-    While running \lstinline[emph={your-host, remote-host}]{tcpdump -x -s 70 host your-host and remote-host}, execute the following \lstinline{socket} command to send a UDP datagram to the remote host:
+    While running \lstinline[emph={h0,h1,netlab}]{tcpdump -x -s 70 host h0.netlab and h1.netlab}, execute the following \lstinline{socket} command to send a UDP datagram to the \textit{h1} host from the \textit{h0}:
 
-    \begin{lstlisting}[emph={your-host, remote-host}]
-socket -i -u -n1 -w1000 remote-host 88888
+    \begin{lstlisting}[emph={h0,h1,netlab}]
+socket -i -u -n1 -w1000 h1.netlab 88888
     \end{lstlisting}
 
     Save the \lstinline{tcpdump} output for the lab report.
@@ -343,11 +343,11 @@ socket -i -u -n1 -w1000 remote-host 88888
 
         Observe what happens and save the \lstinline{tcpdump} output and the ARP tables in all the hosts in your group.
         
-        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from \textit{h2}.
+        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from the \textit{h2}.
         Which host provides the telnet connection?
         Why?
         
-        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from \textit{h3}.
+        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from the \textit{h3}.
     Which host is connected to \textit{h3}? Why?
     \end{enumerate}
     
@@ -360,7 +360,7 @@ socket -i -u -n1 -w1000 remote-host 88888
 
 \section{IP Subnets}\label{sec:ip-subnets}
     Change the host IP addresses and the subnet masks as shown in \hyperref[tab:2.4]{Table~2.4}.
-    Note that two hosts in each group (\textit{h0} and \textit{h3}) are assigned an incorrect subnet mask.
+    Note that two hosts in each group (\textit{h0} and the \textit{h3}) are assigned an incorrect subnet mask.
 
     \begin{table}[H]
         \caption{Host IP addresses and network masks for \nameref{sec:ip-subnets} (Table~2.4)}\label{tab:2.4}
@@ -384,7 +384,7 @@ socket -i -u -n1 -w1000 remote-host 88888
         
         \item When \textit{h3} \lstinline{ping}s one of the hosts that have the correct subnet mask.
 
-        Now, copy the output displayed from the \lstinline{ping} window in \textit{h3}.
+        Now, copy the output displayed from the \lstinline{ping} window in the \textit{h3}.
         Share the saved output message with other students.
         
         \item When a host with the correct subnet mask \lstinline{ping}s \textit{h0}.
