--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -77,7 +77,7 @@
     Configure transparent bridging as in \hyperref[fig:3.7]{Figure~3.7}, \hyperref[tab:3.2]{Table~3.2} and \hyperref[tab:3.3]{Table~3.3}.
     Note that the default configuration of the hosts and the bridges are different from those in the tables.
     You need to change the IP addresses of the bridge interfaces,\footnote{As soon as you change the IP address of the bridge interface your host is connected to, the \lstinline{telnet} connection will be lost.
-    You need to again change the IP address of your machine to be in the same subnet as the bridge interface.
+    You need to again change the IP address of all machine to be in the same subnet as the bridge interface.
     See Section~3.3.3  of reference book.} as well as set the bridge group and enable the spanning tree algorithm (see the previous section on bridge configuration).
     Do the following experiments.
 
@@ -100,18 +100,18 @@ Ctrl+Z
     \end{lstlisting}
 
 \section{Bridge Packet}
-    Run \lstinline{tcpdump -en ip proto 1} on \textit{h0} and \textit{h1} machine.
-    Send \lstinline{ping} messages to \textit{h1} machine from \textit{h0}: \lstinline[emph={h1,netlab}]{ping -sv h1.netlab}.
+    Run \lstinline{tcpdump -en ip proto 1} on the \textit{h0} and the \textit{h1} machine.
+    Send \lstinline{ping} messages to \textit{h1} machine from the \textit{h0}: \lstinline[emph={h1,netlab}]{ping -sv h1.netlab}.
     After receiving the tenth echo reply, quit the \lstinline{ping} process, and save the \lstinline{tcpdump} outputs from both machines.
 
     During this exercise, don’t run \lstinline{ping} programs at the same time from other host.
     For clean results, do your experiments in turn.
     
     \begin{report}
-        \item What are the IP and MAC addresses of a packet that went from your machine to the bridge?
-            What are the IP and MAC addresses of a packet that went from the router to your partner’s machine?
+        \item What are the IP and MAC addresses of a packet that went from the \textit{h0} machine to the bridge?
+            What are the IP and MAC addresses of a packet that went from the router to the \textit{h1} machine?
 
-        \item Answer the same questions, but for the echo reply that was returned from your partner’s machine.
+        \item Answer the same questions, but for the echo reply that was returned from the \textit{h1} machine.
         
         \item Using the \lstinline{tcpdump} outputs from both machines, calculate the average delay that a packet experienced in the bridge.
             \footnote{Note that the system times of the two machines might be different.}
@@ -127,7 +127,7 @@ Ctrl+Z
 %    At this time, save your BPDU capture output.
     
 %    In our next step,  you get BPDUs from other gropu.
-explain stp and bpdu
+% explain stp and bpdu
 
     You should collect BPDUs in this exercise.
     These BPDUs will be helpful when studying the spanning tree algorithm later in this chapter.
@@ -167,7 +167,7 @@ explain stp and bpdu
 \part{Spanning Tree Exercises}
 \label{sec:spanning-tree}
     In this section, we will use \hyperref[fig:3.8]{Figure~3.8} as our network topology.
-    You need to change the IP addresses of the bridge interfaces, as well as that of your machines.
+    You need to change the IP addresses of the bridge interfaces, as well as that of all machines.
     Refer to Section~3.3.4 of reference book on how to configure a transparent bridge.
     Also see Section~3.3.3 of reference book on how to handle a frozen telnet session after you change the bridge IP address.
 
@@ -249,7 +249,7 @@ explain stp and bpdu
     Get to the \textit{Privileged EXEC}\footnote{use \lstinline[language=cisco]{enable} command to active \textit{Privileged EXEC}} mode (is activated by default in \textbf{GNS3}).
     Type \lstinline[language={cisco}]{show bridge} to see the entries in the bridge forwarding database.
 
-    Whenever you \lstinline{ping} or \lstinline{telnet} from \textit{h0} to a host that is not in the table (table form bridge 1), observe how the filtering database in the bridge is expanded.
+    Whenever you \lstinline{ping} or \lstinline{telnet} from the \textit{h0} to a host that is not in the table (table form bridge 1), observe how the filtering database in the bridge is expanded.
 
     You may use the \lstinline[language={cisco}, emph={group}]{clear bridge group} command to remove any learned entries from the filtering database, if you see a full filtering database or if you want to repeat the above exercise.
 
@@ -280,10 +280,10 @@ explain stp and bpdu
 
 
 \section{STP over Topology Dynamics}
-    First, send \lstinline{ping} messages from \textit{h3} to \textit{h4}, while \lstinline{tcpdump} is running.
+    First, send \lstinline{ping} messages from the \textit{h3} to \textit{h4}, while \lstinline{tcpdump} is running.
     Let the two programs run during this exercise.
 
-    Then, shutdown (disconnect) the cable from the \textit{ethernet0} (equal to \textit{FastEthernet0/0} or \textit{f0/0}) port of \textit{Bridge2} from the hub (by \lstinline[language=cisco]{shut} in the router interface configuration mode), and get system time (\lstinline{date}, \lstinline{date '+%D %T.%N'} or \lstinline{date +%s%N} to get nano seconds) on \textit{h3} or \textit{h4} to get the current time.
+    Then, shutdown (disconnect) the cable from the \textit{ethernet0} (equal to \textit{FastEthernet0/0} or \textit{f0/0}) port of \textit{Bridge2} from the hub (by \lstinline[language=cisco]{shut} in the router interface configuration mode), and get system time (\lstinline{date}, \lstinline{date '+%D %T.%N'} or \lstinline{date +%s%N} to get nano seconds) on the \textit{h3} or the \textit{h4} to get the current time.
 
     Observe the \lstinline{ping} and \lstinline{tcpdump} windows.
     When the connection is reestablished, get the \lstinline{time} again.
