--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -14,7 +14,7 @@
     Examine the various configuration directives used and the corresponding settings\footnote{\path{/etc/apache2/apache2.conf}}.
 
     Start the Apache server on your host by: \lstinline{service apache2 start}.
-    In order to check if the server is working properly, you may start a \textit{Mozilla} web browser to download the test page at \href{http://remote-host-ip/}{\textit{http://remote-host-ip/}}.
+    In order to check if the server is working properly, you may start a \textit{Mozilla} web browser to download the test page at \url{http://server.netlab/}.
 
     Then, execute \lstinline{pgrep apache2} to list the process IDs of the \lstinline{apache2} processes started.\footnote{By \lstinline{a2enmod mpm_prefork} you can enable Multi-Processing Module and change default spare process (config file: \path{/etc/apache2/mods-available/mpm_prefork.conf}).}
     Save the output and the configuration file for the lab report.
@@ -29,14 +29,14 @@
     \end{report}
 
 \section{HTTP Request}
-    Execute \lstinline{wireshark} to capture packets between your host and a remote host.
+    Execute \lstinline{wireshark} to capture packets between the \textit{gui} host and the \textit{server} host.
 
-    Login to the remote host’s web server: \lstinline[emph={your-host, remote-host}]{telnet remote-host 80}.
+    Login to the \textit{server} host’s web server: \lstinline[emph={server,netlab}]{telnet server.netlab 80}.
 
     In the login console, type the following HTTP request line by line:
-    \begin{lstlisting}[language={HTTP},morekeywords={[2]GET,From,User-Agent},escapechar={},emph={your-host, remote-host}]
+    \begin{lstlisting}[language={HTTP},morekeywords={[2]GET,From,User-Agent},escapechar={},emph={server,netlab}]
 GET /index.html HTTP/1.0
-From: netlab@your-host
+From: netlab@server.netlab
 User-Agent: HTTPTool/1.0
 
     \end{lstlisting}
@@ -58,16 +58,16 @@ User-Agent: HTTPTool/1.0
     By default, Apache server supports persistent connections.
     Before this exercise, the lab instructor should check the \texttt{KeepAlive} directive in the server configuration file \footnote{\path{/etc/apache2/apache2.conf}} to make sure it is turned on, as \lstinline[language={HTTP}]{KeepAlive On}.
 
-    Execute \lstinline[emph={your-host, remote-host},morekeywords={[3],host,and}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} to capture packets between your host and a remote host.
+    Execute \lstinline[emph={gui,server,netlab},morekeywords={[3],host,and}]{tcpdump host gui.netlab and server.netlab} or run \lstinline{wireshark} to capture packets between the \textit{gui} host and the \textit{server} host.
 
     
-    Enter the URL \url{http://remote-host/try1.html}, to download the HTML file consisting a line of text, an embedded picture, and a hyperlink.
+    Enter the URL \url{http://server.netlab/try1.html}, to download the HTML file consisting a line of text, an embedded picture, and a hyperlink.
 
 
     Disable Apache server persistent connections by change value of \texttt{KeepAlive} option to \lstinline{Off} and restart \lstinline{apache2} service\footnote{\lstinline{service apache2 restart}}.
 
     
-    Use \lstinline[emph={your-host, remote-host},morekeywords={[3],host,and}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} and print the HTTP requests and responses for the lab report.
+    Use \lstinline[emph={gui,server,netlab},morekeywords={[3],host,and}]{tcpdump host gui.netlab and server.netlab} or run \lstinline{wireshark} and print the HTTP requests and responses for the lab report.
     
     Use \textit{Mozilla} to reload the \url{try1.html} file.
     Use \textit{Ctrl+F5} to ignore cache.
@@ -85,9 +85,9 @@ User-Agent: HTTPTool/1.0
     \end{report}
 
 \section{HTTP Submit}
-    Execute \lstinline{wireshark} to capture packets between your host and a remote host.
+    Execute \lstinline{wireshark} to capture packets between the \textit{gui} host and the \textit{server} host.
 
-    Use \textit{Mozilla} to download the \url{http://remote-host/try2.htm} file, which is an \textit{HTML} form, from the remote host.
+    Use \textit{Mozilla} to download the \url{http://server.netlab/try2.htm} file, which is an \textit{HTML} form, from the \textit{server} host.
 
     Fill a text string, e.g.\ the name of the host being used, into the text field in the form and click the submit button in the form.
 
@@ -144,11 +144,11 @@ User-Agent: HTTPTool/1.0
         
         \item Set IP of \textit{h1} to {128.238.66.100}
         
-        \item Start the DHCP server on \textit{h1} in the foreground and working in the debugging mode: \lstinline{dhcpd -d -f}\footnote{default }.
+        \item Start the DHCP server on the \textit{h1} in the foreground and working in the debugging mode: \lstinline{dhcpd -d -f}\footnote{default }.
         
         \item Execute \lstinline{tcpdump -exn -nn -s 100} or \lstinline{wireshark} to capture the DHCP messages in the network segment.
         
-        \item Then do the following to enable DHCP for the Ethernet interface on \textit{h2}.
+        \item Then do the following to enable DHCP for the Ethernet interface on the \textit{h2}.
 
         Run \lstinline{ifconfig eth0 0} on \lstinline{h2} to clear IP of \textit{eth0}
 
@@ -159,17 +159,17 @@ User-Agent: HTTPTool/1.0
 
         Save the outputs for the lab report.
         
-        \item Then, repeat 5 for \textit{h3}.
+        \item Then, repeat 5 for the \textit{h3}.
         
-        \item Repeat 5 for \textit{h4}.
+        \item Repeat 5 for the \textit{h4}.
         
-        \item Repeat 5 for \textit{h5}.
+        \item Repeat 5 for the \textit{h5}.
     \end{enumerate}
 
     Terminate \lstinline{wireshark}.
     Print out the DHCP messages for the lab report.
 
-    Save the DHCP server output on \textit{h1} for the lab report.
+    Save the DHCP server output on the \textit{h1} for the lab report.
 
     \begin{lstlisting}[language={conf}, caption={A DHCP server configuration file (Table~8.3)\label{tab:8.3}},emph={xx}]
 default-lease-time 600;
@@ -194,13 +194,13 @@ host h5 {
         \item Compare the DHCP operation captured by \lstinline{wireshark} and that shown by the DHCP server output.
             Explain how DHCP works.
         
-        \item Did \textit{h2} and \textit{h3} successfully obtain a set of new parameters?
+        \item Did \textit{h2} and the \textit{h3} successfully obtain a set of new parameters?
             Compare the \lstinline{ifconfig} and \lstinline{netstat} output with the parameters carried in the corresponding DHCP messages.
         
-        \item Answer the above question for \textit{h4}.
+        \item Answer the above question for the \textit{h4}.
             Explain why \textit{h4} failed.
         
-        \item Answer the above question for \textit{h5}.
+        \item Answer the above question for the \textit{h5}.
             Explain why \textit{h5} succeeded.
     \end{report}
 
@@ -250,28 +250,28 @@ date -r $file-name
     \end{report}
 
 \section{Remote Date}
-    While \lstinline[emph={your-host, remote-host}]{tcpdump -n -nn -ex host your-host and remote-host} or \lstinline{wireshark} is running, execute \lstinline[emph={your-host, remote-host}]{rdate -p remote-host} to display the system time of the remote machine.
+    While \lstinline[emph={h0,h1,netlab}]{tcpdump -n -nn -ex host h0.netlab and h1.netlab} or \lstinline{wireshark} is running, execute \lstinline[emph={h1,netlab}]{rdate -p h1.netlab} on the \textit{h0} to display the system time of the \textit{h1} machine.
     Repeat the above \lstinline{rdate} command, but use the \lstinline{-u} option.
     Save the \lstinline{wireshark} outputs for the lab report.
 
     \begin{report}
-        \item What port numbers were used by the remote machine?
-            What port numbers were used by the local host?
+        \item What port numbers were used by the \textit{h1} (server) machine?
+            What port numbers were used by the \textit{h0} (client) host?
         
-        \item How many bytes of data were returned by the remote time server, both in the UDP case and in the TCP case?
+        \item How many bytes of data were returned by the \textit{h1} time server, both in the UDP case and in the TCP case?
         
         \item What TCP header options were used?
     \end{report}
 
 \section{NTP Sync}
-    In this exercise, we start the NTP server daemon on \textit{h0} and use NTP to
+    In this exercise, we start the NTP server daemon on the \textit{h0} and use NTP to
     synchronize all the other hosts to \textit{h0}.
-    Study the NTP configuration file \path{/etc/ntp.conf} in \textit{h0} and in your host.
+    Study the NTP configuration file \path{/etc/ntp.conf} in the \textit{h0} and in your host.
     If you are using another machine, you can telnet to \textit{h0} and display the \path{/etc/ntp.conf} file in the telnet window.
-    Start the NTP server on \textit{h0} by \lstinline{service ntp start}.
+    Start the NTP server on the \textit{h0} by \lstinline{service ntp start}.
     To determine the status of the NTP server, use \lstinline{service ntp status}.
-    Use \lstinline[emph={your-host, remote-host, h0},morekeywords={[3],host,and}]{tcpdump -ex -n -nn host your-host and h0} or \lstinline{wireshark} to capture packets between your host and \textit{h0}.
-    Execute \lstinline{ntpdate -d -v 128.238.66.100} to synchronize other host to \textit{h0}.
+    Use \lstinline[emph={h0,h1,netlab},morekeywords={[3],host,and}]{tcpdump -ex -n -nn host h1.netlab and h0.netlab} or \lstinline{wireshark} to capture packets between the \textit{h1} host and the \textit{h0}.
+    Execute \lstinline{ntpdate -d -v 128.238.66.100} to synchronize the \textit{h1} host with \textit{h0}.
     Study the output of this command.
     Save the \lstinline{ntpdate} and the \lstinline{wireshark} outputs for the lab report.
     
@@ -281,8 +281,8 @@ date -r $file-name
     \end{report}
 
 \section{** NTP Server}
-    Keep the NTP server running on \textit{h0}.
-    Execute \lstinline[emph={your-host, remote-host},morekeywords={[3]host,and}]{tcpdump -exn -nn host your-host and 128.238.66.100} or \lstinline{wireshark} to capture the NTP messages between \textit{your-host} and \textit{h0}.
+    Keep the NTP server running on the \textit{h0}.
+    Execute \lstinline[emph={h1,h0,netlab},morekeywords={[3]host,and}]{tcpdump -exn -nn host h1.netlab and h0.netlab} or \lstinline{wireshark} to capture the NTP messages between the \textit{h1} host and the \textit{h0}.
 
     Config \path{/etc/ntp.conf} in \textit{other-host} and add \lstinline[language={conf}]{server 128.238.66.100} to config file.
 
@@ -310,7 +310,7 @@ date -r $file-name
     For the exercises in this section, we use a network setting as shown in \hyperref[fig:8.7]{Figure~8.7}.
     The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix.
     The upper subnet represents the Internet.
-    The hosts, i.e.\  \textit{h0} and \textit{h1} are assigned with public IP addresses.
+    The hosts, i.e.\  \textit{h0} and the \textit{h1} are assigned with public IP addresses.
     Router 1 is used as the stub router, which performs address or port translation for the private network.
     \begin{figure}[H]
         \centering
@@ -367,7 +367,7 @@ date -r $file-name
     Then set the IP address and the network mask of your host as shown in the figure.
     In addition, you need to add a default route in your host’s routing table, using the router interface on your subnet as the default router.
     One student should \lstinline{telnet} to the router and configure the router as shown in \hyperref[tab:8.5]{Table~8.5}.
-    Note that there is a static translation that maps 10.0.0.7, or \textit{h7}, to 128.238.61.104.
+    Note that there is a static translation that maps 10.0.0.7, or the \textit{h7}, to 128.238.61.104.
     Login to the router, execute \lstinline[language={cisco}]{write term} to display the current router configuration.
     Execute \lstinline[language={cisco}]{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
     Save both outputs for the lab report.
@@ -404,7 +404,7 @@ config term
     You may try to \lstinline{ping} \textit{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}.
     Can you \lstinline{ping} these IP addresses? 
 
-    Let an inside host send packets to an outside host, e.g.\ from \textit{h5}, execute \lstinline{ping} 128.238.61.100.
+    Let an inside host send packets to an outside host, e.g.\ from the \textit{h5}, execute \lstinline{ping} 128.238.61.100.
     Can you \lstinline{ping} \textit{h5} from an outside host now? Why? Which IP address should be used in the \lstinline{ping} command in order to \lstinline{ping} \textit{h5}? 
 
     Execute \lstinline[language=cisco]{show ip nat translations} in the router login window to display the translation table.
@@ -424,7 +424,7 @@ config term
     Keep the login session to the router running.
     Execute \lstinline[morekeywords={[3]proto}]{tcpdump -enx -s 100 ip proto 1} or \lstinline{wireshark} to capture ICMP messages on two subnet.
 
-    Execute \lstinline{socket -i -u -n1 128.238.61.101 8888} on \textit{h2} to generate an ICMP port unreachable error.
+    Execute \lstinline{socket -i -u -n1 128.238.61.101 8888} on the \textit{h2} to generate an ICMP port unreachable error.
 
     Print the ICMP error message for the lab report.
 
@@ -447,7 +447,7 @@ config term
     Generate traffic between the inside and outside hosts.
     Examine the \lstinline{tcpdump} output to see how PAT works.
 
-    Start the Apache web server on \textit{h7}.
+    Start the Apache web server on the \textit{h7}.
     Also, run \lstinline[language=bash-ext]{curl} on an outside host (e.g.\ \textit{h0}), and with the URL \url{http://128.238.61.1}.
     Save the \lstinline{tcpdump} output.
 
@@ -488,10 +488,10 @@ config term
     You can compile the C programs by using \lstinline{gcc -o UDPserver UDPserver.c -lnsl} and \lstinline{gcc -o UDPclient UDPclient.c -lnsl}.
     Compile output available at \path{/usr/local/bin/} directory.
 
-    Start \lstinline[emph={your-host, remote-host}]{tcpdump host remote-host} or \lstinline{wireshark} to capture packets from or to a remote host.
+    Start \lstinline[emph={h0,h1,netlab,remote-host}]{tcpdump host remote-host} or \lstinline{wireshark} to capture packets from or to a remote host.
 
     On the remote host, start the UDP server by \lstinline[emph={server-port}]{./UDPserver server-port}.
-    Then, start the UDP client on your host by \lstinline[emph={your-host, remote-host, server-port, a-message}]{./UDPclient remote-host server-port a-message}.
+    Then, start the UDP client on your host by \lstinline[emph={h0,h1,netlab,remote-host, server-port, a-message}]{./UDPclient remote-host server-port a-message}.
     You may execute the UDP client program on other hosts to connect to the same UDP server.
 
     Terminate \lstinline{tcpdump}, examine its output and compare the output with the UDP server and client outputs.
